// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders game-state 1`] = `
<div
  data-status="playing"
>
  Game status: 
  playing
</div>
`;

exports[`renders game-state 2`] = `
<div
  data-status="game-over"
>
  Game status: 
  game-over
</div>
`;
